# wresl

./: .gitignore  .readthedocs.yaml  README.md  build.gradle  gradle.properties.template  run_wrims_study_example.bat  settings.gradle
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_template.md  task_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: Java_CI.yaml  sonar.yaml
docs/: README.WRESLPLUS.md  conf.py  index.rst
docs/_build/html/: .buildinfo  README.WRESLPLUS.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: README.WRESLPLUS.doctree  environment.pickle  index.doctree
docs/explanation/: index.rst
docs/how-to/: index.rst
docs/reference/: index.rst
docs/tutorials/: getting-started.rst  index.rst  shasta-mass-balance.rst
gradle/: libs.versions.toml
src/main/resources/: log4j2.xml
src/test/java/: testParser.java
src/test/resources/: log4j2-test.xml
wresl-core/: build.gradle
wresl-core/src/main/antlr/: wresl.g4
wresl-core/src/main/groovy/: library.deps-conventions.gradle  library.java-conventions.gradle  (+1 more)
wresl-pygment/: LICENSE  pyproject.toml
wresl-pygment/src/wresl_pygment/: __init__.py  lexer.py
wresl-pygment/tests/test_lexer/: __init__.py  test_builtin.py  test_comments.py  test_constant.py  test_directives.py  test_identifiers.py  test_integration.py  test_keywords.py  test_logical_operators.py  test_numbers.py  test_operators.py  test_punctuation.py  test_side_tokens.py  test_strings.py
wrims-core/: build.gradle
(+141 files in other folders)
